new file:   .htaccess 	modified:   application/config/config.php 	modified:   application/config/database.php 	modified:   application/config/routes.php~ 	renamed:    application/controllers/Home.php -> application/controllers/About.php 	modified:   application/controllers/Event.php 	new file:   application/controllers/Forum.php 	modified:   application/controllers/Home.php 	deleted:    application/controllers/Welcome.php 	deleted:    application/models/Event.php 	new file:   application/models/Event_model.php 	deleted:    application/models/FluffyBunnyDB.php 	new file:   application/models/Forum_model.php 	new file:   application/models/News_model.php 	new file:   application/views/about/index.php 	deleted:    application/views/css/bootstrap.css 	deleted:    application/views/css/bootstrap.css.map 	new file:   application/views/event/event.php 	modified:   application/views/event/index.php 	new file:   application/views/forum/index.php 	modified:   application/views/home/index.php 	modified:   application/views/templates/header.php 	deleted:    application/views/test/index.php 	deleted:    application/views/welcome_message.php 	modified:   assets/bootstrap/bootstrap.css 	modified:   assets/css/styles.css 	new file:   assets/images/TEDX.jpg 	new file:   assets/images/events/event1.jpg 	new file:   assets/images/events/event2.jpg 	new file:   assets/images/events/event3.jpg 	new file:   assets/images/image.jpg

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -3561,7 +3561,7 @@ tbody.collapse.in {
 .btn-group > .btn,
 .btn-group-vertical > .btn {
   position: relative;
-  float: left;
+  float: right;
 }
 .btn-group > .btn:hover,
 .btn-group-vertical > .btn:hover,
@@ -3655,7 +3655,7 @@ tbody.collapse.in {
 .btn-group-vertical > .btn-group,
 .btn-group-vertical > .btn-group > .btn {
   display: block;
-  float: none;
+  float: right;
   width: 100%;
   max-width: 100%;
 }
